[project]
name = "smayoussfilangchainbddc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain>=1.2.17",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "sma-mcp-sse",
]
